# ZKDT_release

./: .gitignore  README.md
ZKDT/: CMakeLists.txt
ZKDT/Model/: Abalone_dt.txt  Forest_dt.txt  Iris_dt.txt  abalone.data  breast-cancer-wisconsin.data  breast-cancer-wisconsin_dt.txt  page-blocks_dt.txt  spambase_dt.txt  wine_dt.txt
ZKDT/include/: hash.h
ZKDT/include/DT/: DT.h  compile.h
ZKDT/include/ZKP/: groth16.h
ZKDT/include/gadgets/: common.h  dt_batch_gadget.h  dt_path_gadget.h  swifft.h  tool_gadgets.h
ZKDT/src/: CMakeLists.txt  dt_batch.cpp  dt_path.cpp
